added para for merge conflict

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
     
     <h1>Hello World! and Live Long</h1>
     <p>My name is Ibrahim.</p>
+    <p>Added para for git merge conflict</p>
 
 
 </body>
