added many features

--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,64 @@
 <html lang="en">
 <head>
     <title>My WebPage</title>
+
+    <style>
+        h1 {
+            color: blue;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     
     <h1>Hello World! and Live Long</h1>
     <p>My name is Ibrahim.</p>
+
+    <img src="source/scene.png" alt="Its an image">
+    <h4>List:</h4>
+    <h3>Unordered List</h3>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
+    <h3>Ordered List</h3>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ool>
+
+    <table>
+        <tr>
+            <th>Column 1</th>
+            <th>Column 2</th>
+            <th>Column 3</th>
+        </tr>
+        
+        <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+        </tr>
+
+        <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+        </tr>
+
+
+
+    </table>
+    <form >
+        <input type="text" placeholder="Full Name" name="name">
+        <button>Submit!</button>
+
+    </form>
+
 </body>
 </html>
